fixed UI alignment

--- a/components/Tabs/DocumentSummary/DocumentSummary.module.scss
+++ b/components/Tabs/DocumentSummary/DocumentSummary.module.scss
@@ -40,6 +40,10 @@
     select {
       width: 200px;
       padding: 10px;
+      font-size: 14px;
+      height: 40px;
+      appearance: none;
+      border-radius: 0;
     }
   }
 
@@ -60,6 +64,7 @@
       align-items: center;
       gap: 5px;
       cursor: pointer;
+      font-size: $textFontSize;
     }
   }
 
