--- a/components/Tabs/QuestionAnswer/QuestionAnswer.module.scss
+++ b/components/Tabs/QuestionAnswer/QuestionAnswer.module.scss
@@ -69,9 +69,9 @@
       border: none;
       border-radius: 5px;
       cursor: pointer;
-      background-color: #f0f0f0;
-      color: gray;
-      font-weight: bold;
+      background-color: $grey;
+      color: $white;
+      font-size: $fontSize;
     }
   }
 }
