--- a/components/Tabs/SentimentAnalysis/SentimentAnalysis.module.scss
+++ b/components/Tabs/SentimentAnalysis/SentimentAnalysis.module.scss
@@ -58,6 +58,7 @@
       align-items: center;
       gap: 5px;
       cursor: pointer;
+      font-size: $textFontSize;
     }
   }
 
@@ -70,8 +71,9 @@
       padding: 12px 20px;
       border: none;
       cursor: pointer;
-      background-color: #f0f0f0;
-      color: gray;
+      background-color: $grey;
+      color: $white;
+      font-size: $fontSize;
     }
   }
 
